{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 200,
  "lineage": "d0d2d47d-4cc8-a823-82e1-7047130171f8",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_proxy_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-038712bf53f0cedfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038712bf53f0cedfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098287791e3a8081c",
            "private_dns": "ip-10-0-1-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.196",
            "public_ip": "34.236.190.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069ebfecad68e5475",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01be1d64fce447754",
            "tags": {
              "Name": "Terraform Proxy_A"
            },
            "tags_all": {
              "Name": "Terraform Proxy_A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057ae6949a76628a1"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_proxy_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-0bcdbe228bc4cbc17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcdbe228bc4cbc17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052df7d485c3b0e9e",
            "private_dns": "ip-10-0-1-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.112",
            "public_ip": "34.236.187.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bb95e7766f14efd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01be1d64fce447754",
            "tags": {
              "Name": "Terraform Proxy_B"
            },
            "tags_all": {
              "Name": "Terraform Proxy_B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057ae6949a76628a1"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_server_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-037106689f8b509a8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037106689f8b509a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0abff618b365504e7",
            "private_dns": "ip-10-0-2-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b6a2177bf0ab1ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d5edd7bc519ea02",
            "tags": {
              "Name": "Terraform Server_A"
            },
            "tags_all": {
              "Name": "Terraform Server_A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057ae6949a76628a1"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_server_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:077753290574:instance/i-04959b1e1a0952003",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04959b1e1a0952003",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01fa5a96fc2baf34f",
            "private_dns": "ip-10-0-3-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f6255fd88c3bb11",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053c54b173c7e6342",
            "tags": {
              "Name": "Terraform Server_B"
            },
            "tags_all": {
              "Name": "Terraform Server_B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057ae6949a76628a1"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_private_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:loadbalancer/app/terraform-private-load-balancer/6fe1e0864cbbfb97",
            "arn_suffix": "app/terraform-private-load-balancer/6fe1e0864cbbfb97",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-terraform-private-load-balancer-13829414.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:loadbalancer/app/terraform-private-load-balancer/6fe1e0864cbbfb97",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-private-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-057ae6949a76628a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d5edd7bc519ea02"
              },
              {
                "subnet_id": "subnet-053c54b173c7e6342"
              }
            ],
            "subnets": [
              "subnet-01d5edd7bc519ea02",
              "subnet-053c54b173c7e6342"
            ],
            "tags": {
              "Name": "Terrafform Private Load Balancer"
            },
            "tags_all": {
              "Name": "Terrafform Private Load Balancer"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_public_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:loadbalancer/app/terraform-public-load-balancer/d8374c8cf0d5042f",
            "arn_suffix": "app/terraform-public-load-balancer/d8374c8cf0d5042f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-public-load-balancer-1311954654.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:loadbalancer/app/terraform-public-load-balancer/d8374c8cf0d5042f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-public-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-057ae6949a76628a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0078cc116564fc852"
              },
              {
                "subnet_id": "subnet-01be1d64fce447754"
              }
            ],
            "subnets": [
              "subnet-0078cc116564fc852",
              "subnet-01be1d64fce447754"
            ],
            "tags": {
              "Name": "Terrafform Public Load Balancer"
            },
            "tags_all": {
              "Name": "Terrafform Public Load Balancer"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:listener/app/terraform-private-load-balancer/6fe1e0864cbbfb97/44ba29a5acf29b4d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:listener/app/terraform-private-load-balancer/6fe1e0864cbbfb97/44ba29a5acf29b4d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:loadbalancer/app/terraform-private-load-balancer/6fe1e0864cbbfb97",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.loadbalancer.aws_lb.terraform_private_load_balancer",
            "module.loadbalancer.aws_lb_target_group.terraform_private_target_group",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:listener/app/terraform-public-load-balancer/d8374c8cf0d5042f/1a87c4b9420be3c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:listener/app/terraform-public-load-balancer/d8374c8cf0d5042f/1a87c4b9420be3c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:loadbalancer/app/terraform-public-load-balancer/d8374c8cf0d5042f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.loadbalancer.aws_lb.terraform_public_load_balancer",
            "module.loadbalancer.aws_lb_target_group.terraform_public_target_group",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform_private_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471",
            "arn_suffix": "targetgroup/private-target-group/f6092cc6d3525471",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "private-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform_public_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef",
            "arn_suffix": "targetgroup/public-target-group/b3820922921b1bef",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "public-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_attache_server_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471-20221023095759462700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471",
            "target_id": "i-037106689f8b509a8"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.loadbalancer.aws_lb_target_group.terraform_private_target_group",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_attache_server_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471-20221023095759434400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/private-target-group/f6092cc6d3525471",
            "target_id": "i-04959b1e1a0952003"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.loadbalancer.aws_lb_target_group.terraform_private_target_group",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_attache_proxy_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef-20221023095759329600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef",
            "target_id": "i-038712bf53f0cedfb"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.loadbalancer.aws_lb_target_group.terraform_public_target_group",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_attache_proxy_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef-20221023095759293300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077753290574:targetgroup/public-target-group/b3820922921b1bef",
            "target_id": "i-0bcdbe228bc4cbc17"
          },
          "dependencies": [
            "module.ec2.aws_instance.terraform_proxy_a",
            "module.ec2.aws_instance.terraform_proxy_b",
            "module.ec2.aws_instance.terraform_server_a",
            "module.ec2.aws_instance.terraform_server_b",
            "module.loadbalancer.aws_lb_target_group.terraform_public_target_group",
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_route_table_association.terraform_private_route_a",
            "module.network.aws_route_table_association.terraform_private_route_b",
            "module.network.aws_route_table_association.terraform_public_route_a",
            "module.network.aws_route_table_association.terraform_public_route_b",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.securitygroups.aws_security_group.terraform_security_group",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e228d65f876647d",
            "association_id": "eipassoc-0b2d0a2c8968fae2a",
            "domain": "vpc",
            "id": "eipalloc-09e228d65f876647d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-015572a16ecf2846f",
            "private_dns": "ip-10-0-0-124.ec2.internal",
            "private_ip": "10.0.0.124",
            "public_dns": "ec2-3-226-165-49.compute-1.amazonaws.com",
            "public_ip": "3.226.165.49",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:internet-gateway/igw-052588584a156de94",
            "id": "igw-052588584a156de94",
            "owner_id": "077753290574",
            "tags": {
              "Name": "Terraform Internet Gateway"
            },
            "tags_all": {
              "Name": "Terraform Internet Gateway"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e228d65f876647d",
            "connectivity_type": "public",
            "id": "nat-02542f55a1f2f4ad5",
            "network_interface_id": "eni-015572a16ecf2846f",
            "private_ip": "10.0.0.124",
            "public_ip": "3.226.165.49",
            "subnet_id": "subnet-0078cc116564fc852",
            "tags": {
              "Name": "Terraform NAT Gateway"
            },
            "tags_all": {
              "Name": "Terraform NAT Gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:route-table/rtb-0f32641656e3b5c34",
            "id": "rtb-0f32641656e3b5c34",
            "owner_id": "077753290574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02542f55a1f2f4ad5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Private Route Table"
            },
            "tags_all": {
              "Name": "Terraform Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:route-table/rtb-026bbbe94a2cc80f1",
            "id": "rtb-026bbbe94a2cc80f1",
            "owner_id": "077753290574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052588584a156de94",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Public Route Table"
            },
            "tags_all": {
              "Name": "Terraform Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_private_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0035f09c138c14c",
            "route_table_id": "rtb-0f32641656e3b5c34",
            "subnet_id": "subnet-01d5edd7bc519ea02"
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_subnet.terraform_private_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_private_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0797a813c6da39155",
            "route_table_id": "rtb-0f32641656e3b5c34",
            "subnet_id": "subnet-053c54b173c7e6342"
          },
          "dependencies": [
            "module.network.aws_eip.terraform_elastic_ip",
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_nat_gateway.terraform_nat_gateway",
            "module.network.aws_route_table.terraform_private_route_table",
            "module.network.aws_subnet.terraform_private_subnet_b",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d310830cab20813",
            "route_table_id": "rtb-026bbbe94a2cc80f1",
            "subnet_id": "subnet-0078cc116564fc852"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0bbc91c6a22ed15",
            "route_table_id": "rtb-026bbbe94a2cc80f1",
            "subnet_id": "subnet-01be1d64fce447754"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.terraform_internet_gateway",
            "module.network.aws_route_table.terraform_public_route_table",
            "module.network.aws_subnet.terraform_public_subnet_a",
            "module.network.aws_subnet.terraform_public_subnet_b",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:subnet/subnet-01d5edd7bc519ea02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d5edd7bc519ea02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077753290574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Private Subnet A"
            },
            "tags_all": {
              "Name": "Terraform Private Subnet A"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:subnet/subnet-053c54b173c7e6342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c54b173c7e6342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077753290574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Private Subnet B"
            },
            "tags_all": {
              "Name": "Terraform Private Subnet B"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:subnet/subnet-0078cc116564fc852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0078cc116564fc852",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077753290574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Public Subnet A"
            },
            "tags_all": {
              "Name": "Terraform Public Subnet A"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:subnet/subnet-01be1d64fce447754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01be1d64fce447754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077753290574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Public Subnet B"
            },
            "tags_all": {
              "Name": "Terraform Public Subnet B"
            },
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:security-group/sg-057ae6949a76628a1",
            "description": "Allow HTTP and SSH Inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057ae6949a76628a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow HTTP and SSH Inbound",
            "name_prefix": "",
            "owner_id": "077753290574",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5dc94b5c3ae8b8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077753290574:vpc/vpc-0c5dc94b5c3ae8b8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01be115fb32c7da94",
            "default_route_table_id": "rtb-0745aa077f9a69e58",
            "default_security_group_id": "sg-0ccc324b36b076299",
            "dhcp_options_id": "dopt-08724184f5b3ce736",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5dc94b5c3ae8b8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0745aa077f9a69e58",
            "owner_id": "077753290574",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}